// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ESLint config Snapshot dist/javascript.json 1`] = `
{
  "env": {},
  "globals": {},
  "ignorePatterns": [],
  "noInlineConfig": undefined,
  "parser": null,
  "parserOptions": {},
  "plugins": [
    "simple-import-sort",
    "jest",
    "import",
  ],
  "reportUnusedDisableDirectives": undefined,
  "rules": {
    "array-callback-return": [
      "error",
      {
        "allowImplicit": true,
        "checkForEach": false,
      },
    ],
    "arrow-body-style": [
      "error",
      "as-needed",
      {
        "requireReturnForObjectLiteral": false,
      },
    ],
    "block-scoped-var": [
      "error",
    ],
    "camelcase": [
      "error",
      {
        "ignoreDestructuring": false,
        "ignoreGlobals": false,
        "ignoreImports": false,
        "properties": "never",
      },
    ],
    "consistent-return": [
      "error",
    ],
    "constructor-super": [
      "error",
    ],
    "default-case-last": [
      "error",
    ],
    "default-param-last": [
      "error",
    ],
    "dot-notation": [
      "error",
      {
        "allowKeywords": true,
        "allowPattern": "",
      },
    ],
    "eqeqeq": [
      "error",
      "always",
      {
        "null": "ignore",
      },
    ],
    "for-direction": [
      "error",
    ],
    "func-names": [
      "warn",
    ],
    "getter-return": [
      "error",
      {
        "allowImplicit": true,
      },
    ],
    "grouped-accessor-pairs": [
      "error",
    ],
    "guard-for-in": [
      "error",
    ],
    "import/export": [
      "error",
    ],
    "import/extensions": [
      "error",
      "ignorePackages",
    ],
    "import/first": [
      "error",
    ],
    "import/named": [
      "error",
    ],
    "import/newline-after-import": [
      "error",
    ],
    "import/no-absolute-path": [
      "error",
    ],
    "import/no-amd": [
      "error",
    ],
    "import/no-cycle": [
      "error",
      {
        "ignoreExternal": false,
        "maxDepth": "∞",
      },
    ],
    "import/no-duplicates": [
      "error",
    ],
    "import/no-dynamic-require": [
      "error",
    ],
    "import/no-extraneous-dependencies": [
      "error",
      {
        "devDependencies": [
          "test/**",
          "tests/**",
          "spec/**",
          "**/__tests__/**",
          "**/__mocks__/**",
          "test.{js,cjs,jsx}",
          "test-*.{js,cjs,jsx}",
          "**/*{.,_}{test,spec}.{js,cjs,jsx}",
          "**/jest.config.{js,cjs}",
          "**/jest.setup.{js,cjs}",
          "**/vue.config.js",
          "**/webpack.config.js",
          "**/webpack.config.*.js",
          "**/rollup.config.js",
          "**/rollup.config.*.js",
          "**/gulpfile.js",
          "**/gulpfile.*.js",
          "**/Gruntfile{,.js}",
          "**/protractor.conf.js",
          "**/protractor.conf.*.js",
          "**/karma.conf.js",
          "**/.eslintrc.{js,cjs}",
        ],
        "optionalDependencies": false,
      },
    ],
    "import/no-import-module-exports": [
      "error",
      {
        "exceptions": [],
      },
    ],
    "import/no-mutable-exports": [
      "error",
    ],
    "import/no-named-as-default": [
      "error",
    ],
    "import/no-named-as-default-member": [
      "error",
    ],
    "import/no-named-default": [
      "error",
    ],
    "import/no-relative-packages": [
      "error",
    ],
    "import/no-self-import": [
      "error",
    ],
    "import/no-unresolved": [
      "error",
      {
        "caseSensitive": true,
        "caseSensitiveStrict": false,
        "commonjs": true,
      },
    ],
    "import/no-useless-path-segments": [
      "error",
      {
        "commonjs": true,
      },
    ],
    "import/no-webpack-loader-syntax": [
      "error",
    ],
    "import/order": [
      "error",
      {
        "groups": [
          [
            "builtin",
            "external",
            "internal",
          ],
        ],
        "warnOnUnassignedImports": false,
      },
    ],
    "jest/expect-expect": [
      "warn",
    ],
    "jest/no-alias-methods": [
      "error",
    ],
    "jest/no-commented-out-tests": [
      "warn",
    ],
    "jest/no-conditional-expect": [
      "error",
    ],
    "jest/no-deprecated-functions": [
      "error",
    ],
    "jest/no-disabled-tests": [
      "warn",
    ],
    "jest/no-done-callback": [
      "error",
    ],
    "jest/no-export": [
      "error",
    ],
    "jest/no-focused-tests": [
      "error",
    ],
    "jest/no-identical-title": [
      "error",
    ],
    "jest/no-interpolation-in-snapshots": [
      "error",
    ],
    "jest/no-jasmine-globals": [
      "error",
    ],
    "jest/no-mocks-import": [
      "error",
    ],
    "jest/no-standalone-expect": [
      "error",
    ],
    "jest/no-test-prefixes": [
      "error",
    ],
    "jest/prefer-to-be": [
      "error",
    ],
    "jest/prefer-to-contain": [
      "error",
    ],
    "jest/prefer-to-have-length": [
      "error",
    ],
    "jest/valid-describe-callback": [
      "error",
    ],
    "jest/valid-expect": [
      "error",
    ],
    "jest/valid-expect-in-promise": [
      "error",
    ],
    "jest/valid-title": [
      "error",
    ],
    "lines-around-directive": [
      "error",
      {
        "after": "always",
        "before": "always",
      },
    ],
    "lines-between-class-members": [
      "error",
      "always",
      {
        "exceptAfterSingleLine": false,
      },
    ],
    "new-cap": [
      "error",
      {
        "capIsNew": false,
        "capIsNewExceptions": [
          "Immutable.Map",
          "Immutable.Set",
          "Immutable.List",
        ],
        "newIsCap": true,
        "newIsCapExceptions": [],
        "properties": true,
      },
    ],
    "no-alert": [
      "warn",
    ],
    "no-array-constructor": [
      "error",
    ],
    "no-async-promise-executor": [
      "error",
    ],
    "no-await-in-loop": [
      "warn",
    ],
    "no-buffer-constructor": [
      "error",
    ],
    "no-caller": [
      "error",
    ],
    "no-case-declarations": [
      "error",
    ],
    "no-class-assign": [
      "error",
    ],
    "no-compare-neg-zero": [
      "error",
    ],
    "no-cond-assign": [
      "error",
      "always",
    ],
    "no-const-assign": [
      "error",
    ],
    "no-constant-condition": [
      "warn",
    ],
    "no-constructor-return": [
      "error",
    ],
    "no-control-regex": [
      "error",
    ],
    "no-debugger": [
      "error",
    ],
    "no-delete-var": [
      "error",
    ],
    "no-dupe-args": [
      "error",
    ],
    "no-dupe-class-members": [
      "error",
    ],
    "no-dupe-else-if": [
      "error",
    ],
    "no-dupe-keys": [
      "error",
    ],
    "no-duplicate-case": [
      "error",
    ],
    "no-else-return": [
      "error",
      {
        "allowElseIf": false,
      },
    ],
    "no-empty": [
      "error",
      {
        "allowEmptyCatch": true,
      },
    ],
    "no-empty-character-class": [
      "error",
    ],
    "no-empty-pattern": [
      "error",
    ],
    "no-eval": [
      "error",
    ],
    "no-ex-assign": [
      "error",
    ],
    "no-extend-native": [
      "error",
    ],
    "no-extra-bind": [
      "error",
    ],
    "no-extra-boolean-cast": [
      "error",
    ],
    "no-extra-label": [
      "error",
    ],
    "no-fallthrough": [
      "error",
    ],
    "no-func-assign": [
      "error",
    ],
    "no-global-assign": [
      "error",
      {
        "exceptions": [],
      },
    ],
    "no-implied-eval": [
      "error",
    ],
    "no-import-assign": [
      "error",
    ],
    "no-inner-declarations": [
      "error",
    ],
    "no-invalid-regexp": [
      "error",
    ],
    "no-irregular-whitespace": [
      "error",
    ],
    "no-iterator": [
      "error",
    ],
    "no-label-var": [
      "error",
    ],
    "no-labels": [
      "error",
      {
        "allowLoop": false,
        "allowSwitch": false,
      },
    ],
    "no-lone-blocks": [
      "error",
    ],
    "no-lonely-if": [
      "error",
    ],
    "no-loop-func": [
      "error",
    ],
    "no-loss-of-precision": [
      "error",
    ],
    "no-misleading-character-class": [
      "error",
    ],
    "no-multi-assign": [
      "error",
    ],
    "no-multi-str": [
      "error",
    ],
    "no-nested-ternary": [
      "error",
    ],
    "no-new": [
      "error",
    ],
    "no-new-func": [
      "error",
    ],
    "no-new-object": [
      "error",
    ],
    "no-new-require": [
      "error",
    ],
    "no-new-symbol": [
      "error",
    ],
    "no-new-wrappers": [
      "error",
    ],
    "no-nonoctal-decimal-escape": [
      "error",
    ],
    "no-obj-calls": [
      "error",
    ],
    "no-octal": [
      "error",
    ],
    "no-octal-escape": [
      "error",
    ],
    "no-path-concat": [
      "error",
    ],
    "no-promise-executor-return": [
      "error",
    ],
    "no-proto": [
      "error",
    ],
    "no-prototype-builtins": [
      "error",
    ],
    "no-redeclare": [
      "error",
    ],
    "no-regex-spaces": [
      "error",
    ],
    "no-restricted-exports": [
      "error",
      {
        "restrictedNamedExports": [
          "default",
          "then",
        ],
      },
    ],
    "no-restricted-globals": [
      "error",
      {
        "message": "Use Number.isFinite instead https://github.com/airbnb/javascript#standard-library--isfinite",
        "name": "isFinite",
      },
      {
        "message": "Use Number.isNaN instead https://github.com/airbnb/javascript#standard-library--isnan",
        "name": "isNaN",
      },
      "addEventListener",
      "blur",
      "close",
      "closed",
      "confirm",
      "defaultStatus",
      "defaultstatus",
      "event",
      "external",
      "find",
      "focus",
      "frameElement",
      "frames",
      "history",
      "innerHeight",
      "innerWidth",
      "length",
      "location",
      "locationbar",
      "menubar",
      "moveBy",
      "moveTo",
      "name",
      "onblur",
      "onerror",
      "onfocus",
      "onload",
      "onresize",
      "onunload",
      "open",
      "opener",
      "opera",
      "outerHeight",
      "outerWidth",
      "pageXOffset",
      "pageYOffset",
      "parent",
      "print",
      "removeEventListener",
      "resizeBy",
      "resizeTo",
      "screen",
      "screenLeft",
      "screenTop",
      "screenX",
      "screenY",
      "scroll",
      "scrollbars",
      "scrollBy",
      "scrollTo",
      "scrollX",
      "scrollY",
      "self",
      "status",
      "statusbar",
      "stop",
      "toolbar",
      "top",
    ],
    "no-restricted-properties": [
      "error",
      {
        "message": "arguments.callee is deprecated",
        "object": "arguments",
        "property": "callee",
      },
      {
        "message": "Please use Number.isFinite instead",
        "object": "global",
        "property": "isFinite",
      },
      {
        "message": "Please use Number.isFinite instead",
        "object": "self",
        "property": "isFinite",
      },
      {
        "message": "Please use Number.isFinite instead",
        "object": "window",
        "property": "isFinite",
      },
      {
        "message": "Please use Number.isNaN instead",
        "object": "global",
        "property": "isNaN",
      },
      {
        "message": "Please use Number.isNaN instead",
        "object": "self",
        "property": "isNaN",
      },
      {
        "message": "Please use Number.isNaN instead",
        "object": "window",
        "property": "isNaN",
      },
      {
        "message": "Please use Object.defineProperty instead.",
        "property": "__defineGetter__",
      },
      {
        "message": "Please use Object.defineProperty instead.",
        "property": "__defineSetter__",
      },
      {
        "message": "Use the exponentiation operator (**) instead.",
        "object": "Math",
        "property": "pow",
      },
    ],
    "no-return-assign": [
      "error",
      "always",
    ],
    "no-return-await": [
      "error",
    ],
    "no-script-url": [
      "error",
    ],
    "no-self-assign": [
      "error",
      {
        "props": true,
      },
    ],
    "no-self-compare": [
      "error",
    ],
    "no-sequences": [
      "error",
    ],
    "no-setter-return": [
      "error",
    ],
    "no-shadow": [
      "error",
    ],
    "no-shadow-restricted-names": [
      "error",
    ],
    "no-sparse-arrays": [
      "error",
    ],
    "no-template-curly-in-string": [
      "error",
    ],
    "no-this-before-super": [
      "error",
    ],
    "no-throw-literal": [
      "error",
    ],
    "no-undef": [
      "error",
    ],
    "no-undef-init": [
      "error",
    ],
    "no-underscore-dangle": [
      "error",
      {
        "allow": [],
        "allowAfterSuper": false,
        "allowAfterThis": false,
        "allowAfterThisConstructor": false,
        "allowFunctionParams": true,
        "enforceInClassFields": false,
        "enforceInMethodNames": true,
      },
    ],
    "no-unneeded-ternary": [
      "error",
      {
        "defaultAssignment": false,
      },
    ],
    "no-unreachable": [
      "error",
    ],
    "no-unreachable-loop": [
      "error",
      {
        "ignore": [],
      },
    ],
    "no-unsafe-finally": [
      "error",
    ],
    "no-unsafe-negation": [
      "error",
    ],
    "no-unsafe-optional-chaining": [
      "error",
      {
        "disallowArithmeticOperators": true,
      },
    ],
    "no-unused-expressions": [
      "error",
      {
        "allowShortCircuit": false,
        "allowTaggedTemplates": false,
        "allowTernary": false,
        "enforceForJSX": false,
      },
    ],
    "no-unused-labels": [
      "error",
    ],
    "no-unused-vars": [
      "warn",
      {
        "args": "after-used",
        "ignoreRestSiblings": true,
        "vars": "all",
      },
    ],
    "no-use-before-define": [
      "error",
      {
        "classes": true,
        "functions": true,
        "variables": true,
      },
    ],
    "no-useless-backreference": [
      "error",
    ],
    "no-useless-catch": [
      "error",
    ],
    "no-useless-computed-key": [
      "error",
    ],
    "no-useless-concat": [
      "error",
    ],
    "no-useless-constructor": [
      "error",
    ],
    "no-useless-escape": [
      "error",
    ],
    "no-useless-rename": [
      "error",
      {
        "ignoreDestructuring": false,
        "ignoreExport": false,
        "ignoreImport": false,
      },
    ],
    "no-useless-return": [
      "error",
    ],
    "no-var": [
      "error",
    ],
    "no-void": [
      "error",
    ],
    "no-with": [
      "error",
    ],
    "object-shorthand": [
      "error",
      "always",
      {
        "avoidQuotes": true,
        "ignoreConstructors": false,
      },
    ],
    "one-var": [
      "error",
      "never",
    ],
    "operator-assignment": [
      "error",
      "always",
    ],
    "prefer-arrow-callback": [
      "error",
      {
        "allowNamedFunctions": false,
        "allowUnboundThis": true,
      },
    ],
    "prefer-const": [
      "warn",
      {
        "destructuring": "any",
        "ignoreReadBeforeAssign": true,
      },
    ],
    "prefer-destructuring": [
      "error",
      {
        "AssignmentExpression": {
          "array": false,
          "object": false,
        },
        "VariableDeclarator": {
          "array": false,
          "object": true,
        },
      },
      {
        "enforceForRenamedProperties": false,
      },
    ],
    "prefer-exponentiation-operator": [
      "error",
    ],
    "prefer-numeric-literals": [
      "error",
    ],
    "prefer-object-spread": [
      "error",
    ],
    "prefer-promise-reject-errors": [
      "error",
      {
        "allowEmptyReject": true,
      },
    ],
    "prefer-rest-params": [
      "error",
    ],
    "prefer-spread": [
      "error",
    ],
    "prefer-template": [
      "error",
    ],
    "radix": [
      "error",
    ],
    "require-yield": [
      "error",
    ],
    "simple-import-sort/exports": [
      "warn",
    ],
    "simple-import-sort/imports": [
      "warn",
    ],
    "spaced-comment": [
      "error",
      "always",
      {
        "block": {
          "balanced": true,
          "exceptions": [
            "-",
            "+",
          ],
          "markers": [
            "=",
            "!",
            ":",
            "::",
          ],
        },
        "line": {
          "exceptions": [
            "-",
            "+",
          ],
          "markers": [
            "=",
            "!",
            "/",
          ],
        },
      },
    ],
    "strict": [
      "error",
      "never",
    ],
    "symbol-description": [
      "error",
    ],
    "use-isnan": [
      "error",
    ],
    "valid-typeof": [
      "error",
      {
        "requireStringLiterals": true,
      },
    ],
    "vars-on-top": [
      "error",
    ],
    "yoda": [
      "error",
    ],
  },
  "settings": {
    "import/core-modules": [],
    "import/extensions": [
      ".js",
      ".mjs",
      ".jsx",
    ],
    "import/ignore": [
      "node_modules",
      "\\.(coffee|scss|css|less|hbs|svg|json)$",
    ],
    "import/resolver": {
      "node": {
        "extensions": [
          ".mjs",
          ".js",
          ".json",
        ],
      },
    },
  },
}
`;

exports[`ESLint config Snapshot dist/typescript.json 1`] = `
{
  "env": {},
  "globals": {},
  "ignorePatterns": [],
  "noInlineConfig": undefined,
  "parser": "node_modules/@typescript-eslint/parser/dist/index.js",
  "parserOptions": {
    "project": "./tsconfig.json",
  },
  "plugins": [
    "@typescript-eslint",
    "simple-import-sort",
    "jest",
    "import",
  ],
  "reportUnusedDisableDirectives": undefined,
  "rules": {
    "@typescript-eslint/adjacent-overload-signatures": [
      "error",
    ],
    "@typescript-eslint/array-type": [
      "warn",
    ],
    "@typescript-eslint/await-thenable": [
      "error",
    ],
    "@typescript-eslint/ban-ts-comment": [
      "error",
    ],
    "@typescript-eslint/ban-tslint-comment": [
      "warn",
    ],
    "@typescript-eslint/ban-types": [
      "error",
    ],
    "@typescript-eslint/class-literal-property-style": [
      "warn",
    ],
    "@typescript-eslint/consistent-generic-constructors": [
      "warn",
    ],
    "@typescript-eslint/consistent-indexed-object-style": [
      "warn",
    ],
    "@typescript-eslint/consistent-type-assertions": [
      "warn",
    ],
    "@typescript-eslint/consistent-type-definitions": [
      "warn",
    ],
    "@typescript-eslint/consistent-type-imports": [
      "warn",
    ],
    "@typescript-eslint/default-param-last": [
      "error",
    ],
    "@typescript-eslint/dot-notation": [
      "warn",
      {
        "allowIndexSignaturePropertyAccess": false,
        "allowKeywords": true,
        "allowPattern": "",
        "allowPrivateClassPropertyAccess": false,
        "allowProtectedClassPropertyAccess": false,
      },
    ],
    "@typescript-eslint/explicit-member-accessibility": [
      "warn",
    ],
    "@typescript-eslint/lines-between-class-members": [
      "error",
      "always",
      {
        "exceptAfterSingleLine": false,
      },
    ],
    "@typescript-eslint/naming-convention": [
      "error",
      {
        "format": [
          "camelCase",
          "PascalCase",
          "UPPER_CASE",
        ],
        "selector": "variable",
      },
      {
        "format": [
          "camelCase",
          "PascalCase",
        ],
        "selector": "function",
      },
      {
        "format": [
          "PascalCase",
        ],
        "selector": "typeLike",
      },
    ],
    "@typescript-eslint/no-array-constructor": [
      "error",
    ],
    "@typescript-eslint/no-base-to-string": [
      "warn",
    ],
    "@typescript-eslint/no-confusing-non-null-assertion": [
      "warn",
    ],
    "@typescript-eslint/no-dupe-class-members": [
      "error",
    ],
    "@typescript-eslint/no-duplicate-enum-values": [
      "warn",
    ],
    "@typescript-eslint/no-dynamic-delete": [
      "warn",
    ],
    "@typescript-eslint/no-empty-interface": [
      "error",
    ],
    "@typescript-eslint/no-explicit-any": [
      "warn",
    ],
    "@typescript-eslint/no-extra-non-null-assertion": [
      "error",
    ],
    "@typescript-eslint/no-extraneous-class": [
      "warn",
    ],
    "@typescript-eslint/no-floating-promises": [
      "error",
      {
        "ignoreIIFE": true,
      },
    ],
    "@typescript-eslint/no-for-in-array": [
      "error",
    ],
    "@typescript-eslint/no-implied-eval": [
      "error",
    ],
    "@typescript-eslint/no-inferrable-types": [
      "error",
    ],
    "@typescript-eslint/no-invalid-void-type": [
      "warn",
    ],
    "@typescript-eslint/no-loop-func": [
      "error",
    ],
    "@typescript-eslint/no-loss-of-precision": [
      "error",
    ],
    "@typescript-eslint/no-meaningless-void-operator": [
      "warn",
    ],
    "@typescript-eslint/no-misused-new": [
      "error",
    ],
    "@typescript-eslint/no-misused-promises": [
      "error",
    ],
    "@typescript-eslint/no-namespace": [
      "error",
    ],
    "@typescript-eslint/no-non-null-asserted-nullish-coalescing": [
      "warn",
    ],
    "@typescript-eslint/no-non-null-asserted-optional-chain": [
      "error",
    ],
    "@typescript-eslint/no-non-null-assertion": [
      "warn",
    ],
    "@typescript-eslint/no-redeclare": [
      "error",
    ],
    "@typescript-eslint/no-redundant-type-constituents": [
      "warn",
    ],
    "@typescript-eslint/no-shadow": [
      "error",
    ],
    "@typescript-eslint/no-this-alias": [
      "error",
    ],
    "@typescript-eslint/no-throw-literal": [
      "warn",
    ],
    "@typescript-eslint/no-unnecessary-boolean-literal-compare": [
      "warn",
    ],
    "@typescript-eslint/no-unnecessary-condition": [
      "warn",
    ],
    "@typescript-eslint/no-unnecessary-type-arguments": [
      "warn",
    ],
    "@typescript-eslint/no-unnecessary-type-assertion": [
      "error",
    ],
    "@typescript-eslint/no-unnecessary-type-constraint": [
      "error",
    ],
    "@typescript-eslint/no-unsafe-argument": [
      "error",
    ],
    "@typescript-eslint/no-unsafe-assignment": [
      "error",
    ],
    "@typescript-eslint/no-unsafe-call": [
      "error",
    ],
    "@typescript-eslint/no-unsafe-member-access": [
      "error",
    ],
    "@typescript-eslint/no-unsafe-return": [
      "error",
    ],
    "@typescript-eslint/no-unused-expressions": [
      "error",
      {
        "allowShortCircuit": false,
        "allowTaggedTemplates": false,
        "allowTernary": false,
        "enforceForJSX": false,
      },
    ],
    "@typescript-eslint/no-unused-vars": [
      "warn",
      {
        "args": "after-used",
        "ignoreRestSiblings": true,
        "vars": "all",
      },
    ],
    "@typescript-eslint/no-useless-constructor": [
      "warn",
    ],
    "@typescript-eslint/no-useless-empty-export": [
      "warn",
    ],
    "@typescript-eslint/no-var-requires": [
      "error",
    ],
    "@typescript-eslint/non-nullable-type-assertion-style": [
      "warn",
    ],
    "@typescript-eslint/prefer-as-const": [
      "error",
    ],
    "@typescript-eslint/prefer-for-of": [
      "warn",
    ],
    "@typescript-eslint/prefer-function-type": [
      "warn",
    ],
    "@typescript-eslint/prefer-includes": [
      "warn",
    ],
    "@typescript-eslint/prefer-literal-enum-member": [
      "warn",
    ],
    "@typescript-eslint/prefer-namespace-keyword": [
      "error",
    ],
    "@typescript-eslint/prefer-nullish-coalescing": [
      "warn",
    ],
    "@typescript-eslint/prefer-optional-chain": [
      "warn",
    ],
    "@typescript-eslint/prefer-readonly": [
      "warn",
    ],
    "@typescript-eslint/prefer-reduce-type-parameter": [
      "warn",
    ],
    "@typescript-eslint/prefer-return-this-type": [
      "warn",
    ],
    "@typescript-eslint/prefer-string-starts-ends-with": [
      "warn",
    ],
    "@typescript-eslint/prefer-ts-expect-error": [
      "warn",
    ],
    "@typescript-eslint/require-await": [
      "error",
    ],
    "@typescript-eslint/restrict-plus-operands": [
      "error",
    ],
    "@typescript-eslint/restrict-template-expressions": [
      "error",
    ],
    "@typescript-eslint/return-await": [
      "error",
      "in-try-catch",
    ],
    "@typescript-eslint/strict-boolean-expressions": [
      "error",
    ],
    "@typescript-eslint/triple-slash-reference": [
      "error",
    ],
    "@typescript-eslint/unbound-method": [
      "error",
    ],
    "@typescript-eslint/unified-signatures": [
      "warn",
    ],
    "array-callback-return": [
      "error",
      {
        "allowImplicit": true,
        "checkForEach": false,
      },
    ],
    "arrow-body-style": [
      "error",
      "as-needed",
      {
        "requireReturnForObjectLiteral": false,
      },
    ],
    "block-scoped-var": [
      "error",
    ],
    "consistent-return": [
      "error",
    ],
    "default-case-last": [
      "error",
    ],
    "eqeqeq": [
      "error",
      "always",
      {
        "null": "ignore",
      },
    ],
    "for-direction": [
      "error",
    ],
    "func-names": [
      "warn",
    ],
    "grouped-accessor-pairs": [
      "error",
    ],
    "guard-for-in": [
      "error",
    ],
    "import/export": [
      "error",
    ],
    "import/extensions": [
      "error",
      "ignorePackages",
    ],
    "import/first": [
      "error",
    ],
    "import/newline-after-import": [
      "error",
    ],
    "import/no-absolute-path": [
      "error",
    ],
    "import/no-amd": [
      "error",
    ],
    "import/no-cycle": [
      "error",
      {
        "ignoreExternal": false,
        "maxDepth": "∞",
      },
    ],
    "import/no-duplicates": [
      "error",
    ],
    "import/no-dynamic-require": [
      "error",
    ],
    "import/no-extraneous-dependencies": [
      "error",
      {
        "devDependencies": [
          "test/**",
          "tests/**",
          "spec/**",
          "**/__tests__/**",
          "**/__mocks__/**",
          "test.{js,jsx}",
          "test.{ts,tsx}",
          "test-*.{js,jsx}",
          "test-*.{ts,tsx}",
          "**/*{.,_}{test,spec}.{js,jsx}",
          "**/*{.,_}{test,spec}.{ts,tsx}",
          "**/jest.config.js",
          "**/jest.config.ts",
          "**/jest.setup.js",
          "**/jest.setup.ts",
          "**/vue.config.js",
          "**/vue.config.ts",
          "**/webpack.config.js",
          "**/webpack.config.ts",
          "**/webpack.config.*.js",
          "**/webpack.config.*.ts",
          "**/rollup.config.js",
          "**/rollup.config.ts",
          "**/rollup.config.*.js",
          "**/rollup.config.*.ts",
          "**/gulpfile.js",
          "**/gulpfile.ts",
          "**/gulpfile.*.js",
          "**/gulpfile.*.ts",
          "**/Gruntfile{,.js}",
          "**/Gruntfile{,.ts}",
          "**/protractor.conf.js",
          "**/protractor.conf.ts",
          "**/protractor.conf.*.js",
          "**/protractor.conf.*.ts",
          "**/karma.conf.js",
          "**/karma.conf.ts",
          "**/.eslintrc.js",
          "**/.eslintrc.ts",
        ],
        "optionalDependencies": false,
      },
    ],
    "import/no-import-module-exports": [
      "error",
      {
        "exceptions": [],
      },
    ],
    "import/no-mutable-exports": [
      "error",
    ],
    "import/no-named-as-default": [
      "error",
    ],
    "import/no-named-default": [
      "error",
    ],
    "import/no-relative-packages": [
      "error",
    ],
    "import/no-self-import": [
      "error",
    ],
    "import/no-useless-path-segments": [
      "error",
      {
        "commonjs": true,
      },
    ],
    "import/no-webpack-loader-syntax": [
      "error",
    ],
    "import/order": [
      "error",
      {
        "groups": [
          [
            "builtin",
            "external",
            "internal",
          ],
        ],
        "warnOnUnassignedImports": false,
      },
    ],
    "jest/expect-expect": [
      "warn",
    ],
    "jest/no-alias-methods": [
      "error",
    ],
    "jest/no-commented-out-tests": [
      "warn",
    ],
    "jest/no-conditional-expect": [
      "error",
    ],
    "jest/no-deprecated-functions": [
      "error",
    ],
    "jest/no-disabled-tests": [
      "warn",
    ],
    "jest/no-done-callback": [
      "error",
    ],
    "jest/no-export": [
      "error",
    ],
    "jest/no-focused-tests": [
      "error",
    ],
    "jest/no-identical-title": [
      "error",
    ],
    "jest/no-interpolation-in-snapshots": [
      "error",
    ],
    "jest/no-jasmine-globals": [
      "error",
    ],
    "jest/no-mocks-import": [
      "error",
    ],
    "jest/no-standalone-expect": [
      "error",
    ],
    "jest/no-test-prefixes": [
      "error",
    ],
    "jest/prefer-to-be": [
      "error",
    ],
    "jest/prefer-to-contain": [
      "error",
    ],
    "jest/prefer-to-have-length": [
      "error",
    ],
    "jest/valid-describe-callback": [
      "error",
    ],
    "jest/valid-expect": [
      "error",
    ],
    "jest/valid-expect-in-promise": [
      "error",
    ],
    "jest/valid-title": [
      "error",
    ],
    "lines-around-directive": [
      "error",
      {
        "after": "always",
        "before": "always",
      },
    ],
    "new-cap": [
      "error",
      {
        "capIsNew": false,
        "capIsNewExceptions": [
          "Immutable.Map",
          "Immutable.Set",
          "Immutable.List",
        ],
        "newIsCap": true,
        "newIsCapExceptions": [],
        "properties": true,
      },
    ],
    "no-alert": [
      "warn",
    ],
    "no-async-promise-executor": [
      "error",
    ],
    "no-await-in-loop": [
      "warn",
    ],
    "no-buffer-constructor": [
      "error",
    ],
    "no-caller": [
      "error",
    ],
    "no-case-declarations": [
      "error",
    ],
    "no-class-assign": [
      "error",
    ],
    "no-compare-neg-zero": [
      "error",
    ],
    "no-cond-assign": [
      "error",
      "always",
    ],
    "no-constant-condition": [
      "warn",
    ],
    "no-constructor-return": [
      "error",
    ],
    "no-control-regex": [
      "error",
    ],
    "no-debugger": [
      "error",
    ],
    "no-delete-var": [
      "error",
    ],
    "no-dupe-else-if": [
      "error",
    ],
    "no-duplicate-case": [
      "error",
    ],
    "no-else-return": [
      "error",
      {
        "allowElseIf": false,
      },
    ],
    "no-empty": [
      "error",
      {
        "allowEmptyCatch": true,
      },
    ],
    "no-empty-character-class": [
      "error",
    ],
    "no-empty-pattern": [
      "error",
    ],
    "no-eval": [
      "error",
    ],
    "no-ex-assign": [
      "error",
    ],
    "no-extend-native": [
      "error",
    ],
    "no-extra-bind": [
      "error",
    ],
    "no-extra-boolean-cast": [
      "error",
    ],
    "no-extra-label": [
      "error",
    ],
    "no-fallthrough": [
      "error",
    ],
    "no-global-assign": [
      "error",
      {
        "exceptions": [],
      },
    ],
    "no-inner-declarations": [
      "error",
    ],
    "no-invalid-regexp": [
      "error",
    ],
    "no-irregular-whitespace": [
      "error",
    ],
    "no-iterator": [
      "error",
    ],
    "no-label-var": [
      "error",
    ],
    "no-labels": [
      "error",
      {
        "allowLoop": false,
        "allowSwitch": false,
      },
    ],
    "no-lone-blocks": [
      "error",
    ],
    "no-lonely-if": [
      "error",
    ],
    "no-misleading-character-class": [
      "error",
    ],
    "no-multi-assign": [
      "error",
    ],
    "no-multi-str": [
      "error",
    ],
    "no-nested-ternary": [
      "error",
    ],
    "no-new": [
      "error",
    ],
    "no-new-object": [
      "error",
    ],
    "no-new-require": [
      "error",
    ],
    "no-new-wrappers": [
      "error",
    ],
    "no-nonoctal-decimal-escape": [
      "error",
    ],
    "no-octal": [
      "error",
    ],
    "no-octal-escape": [
      "error",
    ],
    "no-path-concat": [
      "error",
    ],
    "no-promise-executor-return": [
      "error",
    ],
    "no-proto": [
      "error",
    ],
    "no-prototype-builtins": [
      "error",
    ],
    "no-regex-spaces": [
      "error",
    ],
    "no-restricted-exports": [
      "error",
      {
        "restrictedNamedExports": [
          "default",
          "then",
        ],
      },
    ],
    "no-restricted-globals": [
      "error",
      {
        "message": "Use Number.isFinite instead https://github.com/airbnb/javascript#standard-library--isfinite",
        "name": "isFinite",
      },
      {
        "message": "Use Number.isNaN instead https://github.com/airbnb/javascript#standard-library--isnan",
        "name": "isNaN",
      },
      "addEventListener",
      "blur",
      "close",
      "closed",
      "confirm",
      "defaultStatus",
      "defaultstatus",
      "event",
      "external",
      "find",
      "focus",
      "frameElement",
      "frames",
      "history",
      "innerHeight",
      "innerWidth",
      "length",
      "location",
      "locationbar",
      "menubar",
      "moveBy",
      "moveTo",
      "name",
      "onblur",
      "onerror",
      "onfocus",
      "onload",
      "onresize",
      "onunload",
      "open",
      "opener",
      "opera",
      "outerHeight",
      "outerWidth",
      "pageXOffset",
      "pageYOffset",
      "parent",
      "print",
      "removeEventListener",
      "resizeBy",
      "resizeTo",
      "screen",
      "screenLeft",
      "screenTop",
      "screenX",
      "screenY",
      "scroll",
      "scrollbars",
      "scrollBy",
      "scrollTo",
      "scrollX",
      "scrollY",
      "self",
      "status",
      "statusbar",
      "stop",
      "toolbar",
      "top",
    ],
    "no-restricted-properties": [
      "error",
      {
        "message": "arguments.callee is deprecated",
        "object": "arguments",
        "property": "callee",
      },
      {
        "message": "Please use Number.isFinite instead",
        "object": "global",
        "property": "isFinite",
      },
      {
        "message": "Please use Number.isFinite instead",
        "object": "self",
        "property": "isFinite",
      },
      {
        "message": "Please use Number.isFinite instead",
        "object": "window",
        "property": "isFinite",
      },
      {
        "message": "Please use Number.isNaN instead",
        "object": "global",
        "property": "isNaN",
      },
      {
        "message": "Please use Number.isNaN instead",
        "object": "self",
        "property": "isNaN",
      },
      {
        "message": "Please use Number.isNaN instead",
        "object": "window",
        "property": "isNaN",
      },
      {
        "message": "Please use Object.defineProperty instead.",
        "property": "__defineGetter__",
      },
      {
        "message": "Please use Object.defineProperty instead.",
        "property": "__defineSetter__",
      },
      {
        "message": "Use the exponentiation operator (**) instead.",
        "object": "Math",
        "property": "pow",
      },
    ],
    "no-return-assign": [
      "error",
      "always",
    ],
    "no-script-url": [
      "error",
    ],
    "no-self-assign": [
      "error",
      {
        "props": true,
      },
    ],
    "no-self-compare": [
      "error",
    ],
    "no-sequences": [
      "error",
    ],
    "no-shadow-restricted-names": [
      "error",
    ],
    "no-sparse-arrays": [
      "error",
    ],
    "no-template-curly-in-string": [
      "error",
    ],
    "no-undef-init": [
      "error",
    ],
    "no-underscore-dangle": [
      "error",
      {
        "allow": [],
        "allowAfterSuper": false,
        "allowAfterThis": false,
        "allowAfterThisConstructor": false,
        "allowFunctionParams": true,
        "enforceInClassFields": false,
        "enforceInMethodNames": true,
      },
    ],
    "no-unneeded-ternary": [
      "error",
      {
        "defaultAssignment": false,
      },
    ],
    "no-unreachable-loop": [
      "error",
      {
        "ignore": [],
      },
    ],
    "no-unsafe-finally": [
      "error",
    ],
    "no-unsafe-optional-chaining": [
      "error",
      {
        "disallowArithmeticOperators": true,
      },
    ],
    "no-unused-labels": [
      "error",
    ],
    "no-useless-backreference": [
      "error",
    ],
    "no-useless-catch": [
      "error",
    ],
    "no-useless-computed-key": [
      "error",
    ],
    "no-useless-concat": [
      "error",
    ],
    "no-useless-escape": [
      "error",
    ],
    "no-useless-rename": [
      "error",
      {
        "ignoreDestructuring": false,
        "ignoreExport": false,
        "ignoreImport": false,
      },
    ],
    "no-useless-return": [
      "error",
    ],
    "no-var": [
      "error",
    ],
    "no-void": [
      "error",
    ],
    "no-with": [
      "error",
    ],
    "object-shorthand": [
      "error",
      "always",
      {
        "avoidQuotes": true,
        "ignoreConstructors": false,
      },
    ],
    "one-var": [
      "error",
      "never",
    ],
    "operator-assignment": [
      "error",
      "always",
    ],
    "prefer-arrow-callback": [
      "error",
      {
        "allowNamedFunctions": false,
        "allowUnboundThis": true,
      },
    ],
    "prefer-const": [
      "warn",
      {
        "destructuring": "any",
        "ignoreReadBeforeAssign": true,
      },
    ],
    "prefer-destructuring": [
      "error",
      {
        "AssignmentExpression": {
          "array": false,
          "object": false,
        },
        "VariableDeclarator": {
          "array": false,
          "object": true,
        },
      },
      {
        "enforceForRenamedProperties": false,
      },
    ],
    "prefer-exponentiation-operator": [
      "error",
    ],
    "prefer-numeric-literals": [
      "error",
    ],
    "prefer-object-spread": [
      "error",
    ],
    "prefer-promise-reject-errors": [
      "error",
      {
        "allowEmptyReject": true,
      },
    ],
    "prefer-rest-params": [
      "error",
    ],
    "prefer-spread": [
      "error",
    ],
    "prefer-template": [
      "error",
    ],
    "radix": [
      "error",
    ],
    "require-yield": [
      "error",
    ],
    "simple-import-sort/exports": [
      "warn",
    ],
    "simple-import-sort/imports": [
      "warn",
    ],
    "spaced-comment": [
      "error",
      "always",
      {
        "block": {
          "balanced": true,
          "exceptions": [
            "-",
            "+",
          ],
          "markers": [
            "=",
            "!",
            ":",
            "::",
          ],
        },
        "line": {
          "exceptions": [
            "-",
            "+",
          ],
          "markers": [
            "=",
            "!",
            "/",
          ],
        },
      },
    ],
    "strict": [
      "error",
      "never",
    ],
    "symbol-description": [
      "error",
    ],
    "use-isnan": [
      "error",
    ],
    "vars-on-top": [
      "error",
    ],
    "yoda": [
      "error",
    ],
  },
  "settings": {
    "import/core-modules": [],
    "import/extensions": [
      ".js",
      ".mjs",
      ".jsx",
      ".ts",
      ".tsx",
      ".d.ts",
    ],
    "import/external-module-folders": [
      "node_modules",
      "node_modules/@types",
    ],
    "import/ignore": [
      "node_modules",
      "\\.(coffee|scss|css|less|hbs|svg|json)$",
    ],
    "import/parsers": {
      "@typescript-eslint/parser": [
        ".ts",
        ".tsx",
        ".d.ts",
      ],
    },
    "import/resolver": {
      "node": {
        "extensions": [
          ".mjs",
          ".js",
          ".json",
          ".ts",
          ".d.ts",
        ],
      },
    },
  },
}
`;
